# Autonomous-Mobile-Robots-Course-ETHZ

./: .gitignore  requirements.txt
Excercises/E01-20260629/: e01_aeroplane.py  e01_ballons_in_cappadocia.blend
Excercises/E02-20260629/: e02.ipynb  requirements.txt  utils.py
Excercises/E03-20260629/: README.md  e03.ipynb  utils.py
Excercises/E04-20260629/: e04_diff_drive.py  requirements.txt  up_to_scale_demo.blend
Excercises/E05-20260629/: e05_pinhole_camera.py  e05_stereo_vision.py  requirements.txt
Excercises/E06-20260629/: e06_diff_drive_mocap.py  e06_least_squares.py
Excercises/E07-20260629/: E7_diff_drive_sim.py
Excercises/E08-20260629/: E8_bundle_adjustment.py  E8_keypoint_matching.py
Excercises/E09-20260629/: E9_diff_drive_esdf.py  E9_diff_drive_occ.py
Excercises/E10-20260629/: E10_hill_driving.py  requirements.txt
Solutions/E01 Solutions-20260629/: e01_aeroplane_sol.py  e01_ballons_in_cappadocia_sol.blend
Solutions/E02 Solutions-20260629/: e02_sol.ipynb
Solutions/E03 Solutions-20260629/: e03_sol.ipynb
Solutions/E04 Solutions-20260629/: e04_diff_drive_sol.py
Solutions/E05 Solutions-20260629/: e05_pinhole_camera_sol.py  e05_stereo_vision_sol.py
Solutions/E06 Solutions-20260629/: e06_diff_drive_mocap_sol.py  e06_least_squares_sol.py
Solutions/E07 Solutions-20260629/: E7_diff_drive_sim_sol.py
Solutions/e12_sol/amr_ex_12_sol/: .gitignore  pyproject.toml
Solutions/e12_sol/amr_ex_12_sol/amr_ex_12_sol/: e12_task_1_mdp_sol.py  e12_task_2_q_learning_sol.py  e12_task_3_dqn_sol.py  e12_task_4_rl_sol.py  utils.py
(+12 files in other folders)
