[project]
name = "amr-ex-12-sol"
version = "0.1.0"
description = "Solution for AMR exercise 12"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d,mujoco,toy-text]>=1.2.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyqt5>=5.15.11",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.0.0",
    "torch>=2.11.0",
    "tyro>=1.0.13",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
